<resources>
    <string name="app_name">CarRepair</string>
    <!--机油-->
    <string name="oil_valvoline_1">【正品授权】美国胜牌/Valvoline All-Climate 星锐合成机油 SN/GF-5 5W-30 4L【881818】 </string>
    <string name="oil_valvoline_2">【正品授权】美国胜牌/Valvoline All-Climate 星胜全合成机油 SN/GF-5 0W-20 4L【883774】  </string>
    <string name="oil_IDEMITSU_1">【品牌直供】日本出光/IDEMITSU 全合成节能环保 汽油发动机油 SN/GF-5 5W-30 4L</string>
    <string name="oil_IDEMITSU_2">【品牌直供】日本出光/IDEMITSU 全合成节能环保 汽油发动机油 SN 5W-40 4L</string>
    <!--防冻液-->
    <!--登陆界面-->
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_passwd">密码</string>
    <string name="login_checkbox">记住密码</string>
    <string name="login_bt">登 录</string>
    <!--注册界面-->
    <string name="signup_hint_useremail">邮箱</string>
    <string name="signup_bt">注 册</string>
    <!--BottomNavigationView-->
    <string name="menu_home">主 页</string>
    <string name="menu_search">搜 索</string>
    <string name="menu_shopping">购物车</string>
    <string name="menu_user">用 户</string>
    <!--sign_up highlight-->
    <string name="sign_up" formatted="false">
        <![CDATA[
    <font color=\'#28b5f5\'> No account yet? Create one</font>
    ]]>
    </string>
</resources>
