<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_shopping"
        android:enabled="true"
        android:icon="@mipmap/ic_shopping"
        android:title="@string/menu_shopping"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:icon="@mipmap/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_user"
        android:enabled="true"
        android:icon="@mipmap/ic_user"
        android:title="@string/menu_user"
        app:showAsAction="ifRoom" />
</menu>