<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackGround"
    tools:context="com.johnnytan.dell.nothelloworld.view.activity.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_con"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="23sp"
        android:typeface="monospace" />

    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_edittext">

        <ImageView
            android:id="@+id/iv_userIconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@mipmap/ic_edittextuname" />

        <View
            android:id="@+id/viewName"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_userIconName"
            android:background="@color/colorCursor" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/viewName"
            android:background="@null"
            android:ems="19"
            android:hint="@string/login_hint_username"
            android:textColorHint="@color/colorCursor"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_nameClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_backspace"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_username"
        android:layout_marginTop="1dp"
        android:background="@drawable/rectangle_edittext">

        <ImageView
            android:id="@+id/iv_userIconPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@mipmap/ic_edittextupwd" />

        <View
            android:id="@+id/viewPwd"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_userIconPwd"
            android:background="@color/colorCursor" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/viewPwd"
            android:background="@null"
            android:drawablePadding="5dp"
            android:ems="19"
            android:hint="@string/login_hint_passwd"
            android:inputType="textPassword"
            android:textColorHint="@color/colorCursor"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_pwdClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_backspace"
            android:visibility="invisible" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/cb_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_userPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@null"
        android:buttonTint="@color/colorLoginButton"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="@string/login_checkbox"
        android:textColor="#666666"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_bt"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:clickable="true"
        android:textSize="16dip" />
</RelativeLayout>
